Support MSYS2